apps/luna/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: luna
  namespace: galaxy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: luna
  template:
    metadata:
      labels:
        name: luna
    spec:
      serviceAccountName: luna
      containers:
        - name: luna
          image: edrodefeld/luna
          imagePullPolicy: Always 
          ports:
            - containerPort: 3000
