apps/luna/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: luna-ingress
  namespace: galaxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: galaxy-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: luna.pinwheel.fan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: luna-service
                port:
                  number: 3000
  tls:
    - secretName: luna-tls
      hosts:
        - luna.pinwheel.fan
